samples/_failures_safe/1761630715_eda299_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bef03689.c: In function ‘main’:
./samples/SAFE/__tmp_bef03689.c:169:9: error: ‘process’ undeclared (first use in this function)
  169 |     if (process
      |         ^~~~~~~
./samples/SAFE/__tmp_bef03689.c:169:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bef03689.c:169:16: error: expected ‘)’ at end of input
  169 |     if (process
      |        ~       ^
      |                )
./samples/SAFE/__tmp_bef03689.c:169:5: error: expected declaration or statement at end of input
  169 |     if (process
      |     ^~
